# cablewatch

./: .gitignore  .python-version  Makefile  README.rst  ROADMAP.md  Test_jlsv.md  cablewatch-local.toml.sample  pyproject.toml  requirements.txt
data/ingest/ingest_test/: segment_2025-12-24_16h36mn20.ts  segment_2025-12-24_16h36mn50.ts  segment_2025-12-24_16h37mn20.ts  segment_2025-12-24_16h37mn55.ts
data/trascript/: segment_2025-12-24_16h36mn20.txt  segment_2025-12-24_16h36mn50.txt  segment_2025-12-24_16h37mn20.txt  segment_2025-12-24_16h37mn55.txt
docker/: bash-init.sh  build-devel.py  devel.Dockerfile  run-devel.py
docs/src/: conf.py
docs/src/project_proposal/: index.rst
rag_test/: tests.ipynb
src/cablewatch/: banners.py  cli.py  config.py  database.py  decorators.py  http.py  ingest.py  loghlp.py  scheduler.py  speech.py
src/cablewatch/scripts/: _bootstrap_package.py  build_docker_devel_image.py  run_docker_devel_image.py
src/cablewatch/transcripts_jlsv/: trascribe_service.py
src/cablewatch/transcripts_jlsv/utils/: commands.yaml
tests/: test_codequality.py  test_gcp.py  test_sanity.py
www/: index.html  ingest.html
